build: Updating npm dependencies
* eslint-config-wikimedia: 0.15.3 → 0.17.0
  The following rules are failing and were disabled:
  * no-shadow

* grunt: 1.1.0 → 1.3.0
* grunt-eslint: 22.0.0 → 23.0.0

Additional changes:
* Removed global `OO`, included via `wikimedia/mediawiki` profile (T262222).

Change-Id: Ied66777dbcaf5d2bebe2389eaf4f2ecbf399dec2

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,7 +7,9 @@
 	],
 	"globals": {
 		"jQuery": false,
-		"mediaWiki": false,
-		"OO": false
+		"mediaWiki": false
+	},
+	"rules": {
+		"no-shadow": "warn"
 	}
 }
